--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@ body {
     margin: 0 20px 20px 20px;
     text-align: center;
 }
+.block h2 {
+    margin-top: 0;
+}
 .block:last-child {
     margin: 0;
     border-bottom: none;
